# libcucs

./: CMakeLists.txt  README.md
includes/: main.h
pkgconfig/: cucs.pc  cucs.pc.in
src/: cs_internal.h  cu_findpairs.cu  cu_random.cu  cu_reduction.cu  cudalib.h  cudaptr.h  elapsed_time.cpp  elapsed_time.h  file_reader.cpp  main.cu
